[gd_scene load_steps=23 format=3 uid="uid://dtsmh3r0kycrw"]

[ext_resource type="AudioStream" uid="uid://brp8iv61fonns" path="res://audio/sound/sfx-blipmale.wav" id="8_ance2"]
[ext_resource type="Script" uid="uid://2pc3qdy2g7m" path="res://audio/voice_blip_player.gd" id="9_tg6eo"]
[ext_resource type="AudioStream" uid="uid://d3as2h3rt3wtp" path="res://audio/sound/sfx-blipfemale.wav" id="10_fdiee"]
[ext_resource type="PackedScene" uid="uid://bc3d7k6q7nxe3" path="res://scenes/wide/wide_view.tscn" id="10_hg0yk"]
[ext_resource type="AudioStream" uid="uid://c78qahoasi6ar" path="res://audio/sound/sfx-typwriter.wav" id="11_cis7q"]
[ext_resource type="PackedScene" uid="uid://b2fk3m2tmi0xu" path="res://scenes/zoom/action_lines_view.tscn" id="11_l7imp"]
[ext_resource type="PackedScene" uid="uid://dmdrdriv4rjlv" path="res://scenes/gavel_slam/gavel_slam_view.tscn" id="12_2j504"]
[ext_resource type="PackedScene" uid="uid://cm0jdo28dnbbi" path="res://feenie/feenie_engine.tscn" id="12_ryguw"]
[ext_resource type="Script" uid="uid://ch44pd7uit5eu" path="res://script_manager.gd" id="13_dml7f"]
[ext_resource type="Script" uid="uid://61hix0haabkg" path="res://audio/sound_player.gd" id="14_2tbeq"]
[ext_resource type="Script" uid="uid://cvm6ybd54htp6" path="res://audio/music_player.gd" id="15_n5jm8"]
[ext_resource type="PackedScene" uid="uid://cavxmwjgdsolv" path="res://ui/game_ui.tscn" id="16_48a6l"]
[ext_resource type="Script" uid="uid://x66fx0joxt2m" path="res://effects/shaker/node2d_shaker.gd" id="16_mecxv"]
[ext_resource type="PackedScene" uid="uid://bf1hsaiiken00" path="res://scenes/main/main_court_view.tscn" id="17_43555"]
[ext_resource type="PackedScene" uid="uid://1iruudku7hww" path="res://scenes/counsel/counsel_view.tscn" id="17_apcaq"]
[ext_resource type="Script" uid="uid://dwpg4v7jio0l6" path="res://camera/camera.gd" id="17_efp1a"]
[ext_resource type="Script" uid="uid://dhxo0owmmgaip" path="res://effects/shaker/shaker_manager.gd" id="17_jypuo"]
[ext_resource type="PackedScene" uid="uid://cbtonh0u74a8v" path="res://scenes/perceive/perceive_effect.tscn" id="18_7lwyl"]
[ext_resource type="PackedScene" uid="uid://dd2xc26iwfwel" path="res://scenes/judge/judge_view.tscn" id="18_btfy3"]
[ext_resource type="Script" uid="uid://iodxjpvt0dxl" path="res://ui/behind_character_solid/behind_character_solid.gd" id="18_q6hsr"]
[ext_resource type="PackedScene" uid="uid://btpnuaw6g48yu" path="res://scenes/mood_matrix_bg/mood_matrix_bg.tscn" id="18_rb12j"]
[ext_resource type="PackedScene" uid="uid://dhmhsu0khyno4" path="res://effects/confetti/confetti_container.tscn" id="19_mw2qx"]

[node name="Node2D" type="Node2D"]

[node name="VoiceBlipPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_ance2")
script = ExtResource("9_tg6eo")
male_blip = ExtResource("8_ance2")
female_blip = ExtResource("10_fdiee")
typewriter_blip = ExtResource("11_cis7q")

[node name="GameUI" parent="." instance=ExtResource("16_48a6l")]

[node name="MainCourtView" parent="." instance=ExtResource("17_43555")]
unique_name_in_owner = true

[node name="JudgeView" parent="." instance=ExtResource("18_btfy3")]
unique_name_in_owner = true
position = Vector2(0, 256)

[node name="CounselView" parent="." instance=ExtResource("17_apcaq")]
unique_name_in_owner = true
position = Vector2(0, 512)

[node name="BehindCourtView" parent="." instance=ExtResource("10_hg0yk")]
unique_name_in_owner = true
position = Vector2(0, 768)

[node name="ActionLinesView" parent="." instance=ExtResource("11_l7imp")]
unique_name_in_owner = true
position = Vector2(0, 1024)

[node name="GavelSlamView" parent="." instance=ExtResource("12_2j504")]
unique_name_in_owner = true
position = Vector2(0, 1280)

[node name="FeenieEngine" parent="." instance=ExtResource("12_ryguw")]
unique_name_in_owner = true

[node name="ScriptManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("13_dml7f")

[node name="SoundPlayer" type="Node" parent="."]
script = ExtResource("14_2tbeq")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("15_n5jm8")

[node name="CameraShaker" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("16_mecxv")

[node name="InnerContainer" type="Node2D" parent="CameraShaker"]

[node name="Camera" type="Camera2D" parent="CameraShaker/InnerContainer"]
unique_name_in_owner = true
script = ExtResource("17_efp1a")

[node name="PerceiveEffect" parent="CameraShaker/InnerContainer/Camera" instance=ExtResource("18_7lwyl")]

[node name="MoodMatrixBg" parent="CameraShaker/InnerContainer/Camera" instance=ExtResource("18_rb12j")]

[node name="BehindCharacterSolid" type="ColorRect" parent="CameraShaker/InnerContainer/Camera"]
z_index = -6
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = 96.0
color = Color(0, 0, 0, 1)
script = ExtResource("18_q6hsr")

[node name="ConfettiContainer" parent="CameraShaker/InnerContainer/Camera" instance=ExtResource("19_mw2qx")]
position = Vector2(-128, -96)

[node name="ShakerManager" type="Node" parent="."]
script = ExtResource("17_jypuo")
